--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ body {
     justify-content: space-around;
     align-items: center;
     background-color: hsl(0, 0%, 12%);
-    min-width: 25vw;
-    min-height: 80vh;
+    max-width: 25em;
+    max-height: 80em;
     border-radius: 12px;
     padding: 30px;
     gap: 1px;
